Homepage layout done

--- a/wp-content/themes/cookiequeen/css/corner-hutch-cookies.webflow.css
+++ b/wp-content/themes/cookiequeen/css/corner-hutch-cookies.webflow.css
@@ -120,8 +120,8 @@ em {
 }
 
 .main-navlink-block {
-  margin-right: 20px;
-  margin-left: 20px;
+  margin-right: 15px;
+  margin-left: 15px;
   padding: 10px 0px;
   border-bottom: 5px solid transparent;
   -webkit-transition: border 200ms cubic-bezier(.86, 0, .07, 1);
@@ -211,7 +211,7 @@ em {
   display: -ms-flexbox;
   display: flex;
   overflow: hidden;
-  margin-bottom: -800px;
+  margin-bottom: -705px;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -webkit-flex-direction: row;
@@ -228,6 +228,8 @@ em {
 }
 
 .home_img--logo {
+  position: relative;
+  z-index: 1000000;
   width: 450px;
   margin-bottom: 15px;
   -webkit-transform: rotate(0deg);
@@ -538,7 +540,7 @@ em {
 }
 
 .page-navlink--block {
-  margin: 0px 20px;
+  margin: 0px 15px;
   padding: 10px 0px;
   border-bottom: 3px solid transparent;
   opacity: 1;
@@ -597,7 +599,7 @@ em {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  padding-right: 0rem;
+  padding-right: 4rem;
   float: none;
   clear: none;
   -webkit-box-orient: horizontal;
@@ -958,6 +960,15 @@ em {
   flex: 0 50%;
 }
 
+.button.melon.small.specials {
+  width: 50%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+}
+
 .page-contain {
   padding-top: 100px;
   padding-bottom: 40px;
@@ -1009,6 +1020,10 @@ em {
 .social.desk {
   width: 6.5rem;
   float: right;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
   -webkit-box-ordinal-group: 2;
   -webkit-order: 1;
   -ms-flex-order: 1;
@@ -1032,8 +1047,7 @@ em {
 
 .social-link:hover {
   border-bottom-style: none;
-  -webkit-filter: none;
-  filter: none;
+  border-bottom-color: #fff;
 }
 
 .page-logo {
@@ -1104,9 +1118,7 @@ em {
   display: -ms-flexbox;
   display: flex;
   max-width: 800px;
-  margin-right: auto;
-  margin-bottom: 40px;
-  margin-left: auto;
+  margin: 40px auto;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -1545,10 +1557,10 @@ em {
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: start;
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
@@ -1566,6 +1578,7 @@ em {
   margin-bottom: 10px;
   font-size: 2em;
   line-height: 1.3em;
+  font-weight: 400;
 }
 
 .special-item {
@@ -1598,19 +1611,22 @@ em {
   margin-bottom: 5px;
   font-size: 1.2em;
   line-height: 1.2em;
+  font-weight: 400;
 }
 
 .special-descrip {
-  color: #000;
-  font-size: 0.9em;
+  color: #272727;
+  font-size: 1em;
   line-height: 1.3em;
   font-weight: 300;
   letter-spacing: 0.025em;
 }
 
 .special-id {
+  padding-bottom: 10px;
   font-size: 1.2em;
-  line-height: 1.5em;
+  line-height: 1.1em;
+  font-weight: 400;
 }
 
 .specials-summary {
@@ -1696,23 +1712,15 @@ em {
 
 .home-cookie-01 {
   position: relative;
-  left: -26px;
-  top: 187px;
+  left: 111px;
+  top: 249px;
   display: block;
-  max-width: 280px;
-  -webkit-transform: rotate(-11deg);
-  -ms-transform: rotate(-11deg);
-  transform: rotate(-11deg);
 }
 
 .home-cookie-02 {
   position: relative;
-  top: 148px;
-  right: -92px;
-  max-width: 200px;
-  -webkit-transform: rotate(-23deg);
-  -ms-transform: rotate(-23deg);
-  transform: rotate(-23deg);
+  top: 99px;
+  right: 141px;
 }
 
 .header-left-imgs {
@@ -1766,99 +1774,63 @@ em {
 
 .home-cookie-03 {
   position: relative;
-  top: -32px;
-  right: 175px;
-  max-width: 150px;
-  -webkit-transform: rotate(-100deg);
-  -ms-transform: rotate(-100deg);
-  transform: rotate(-100deg);
+  top: -311px;
+  right: 111px;
 }
 
 .home-cookie-04 {
   position: relative;
-  top: -684px;
-  right: -17px;
-  max-width: 165px;
-  -webkit-transform: rotate(11deg);
-  -ms-transform: rotate(11deg);
-  transform: rotate(11deg);
+  top: -676px;
+  right: -31px;
 }
 
 .home-cookie-05 {
   position: relative;
-  left: -9px;
-  top: -62px;
-  max-width: 230px;
-  -webkit-transform: rotate(-17deg);
-  -ms-transform: rotate(-17deg);
-  transform: rotate(-17deg);
+  left: -7px;
+  top: -38px;
 }
 
 .home-cookie-06 {
   position: relative;
-  left: 23px;
-  top: -29px;
-  max-width: 250px;
-  -webkit-transform: rotate(46deg);
-  -ms-transform: rotate(46deg);
-  transform: rotate(46deg);
+  left: -124px;
+  top: 79px;
 }
 
 .home-cookie-07 {
   position: relative;
-  left: 239px;
-  top: -355px;
-  max-width: 185px;
+  left: 110px;
+  top: -301px;
 }
 
 .home-cookie-08 {
   position: relative;
-  left: -78px;
-  top: -268px;
-  max-width: 200px;
+  left: 130px;
+  top: -248px;
 }
 
 .home-cookie-09 {
   position: relative;
-  left: -243px;
-  top: -920px;
-  max-width: 215px;
-  -webkit-transform: rotate(11deg);
-  -ms-transform: rotate(11deg);
-  transform: rotate(11deg);
+  left: -207px;
+  top: -877px;
 }
 
 .home-cookie-10 {
   position: relative;
-  left: 186px;
-  top: -417px;
-  max-width: 225px;
-  -webkit-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  transform: rotate(0deg);
+  left: 344px;
+  top: -615px;
 }
 
 .home-cookie-11 {
   position: relative;
-  left: 343px;
-  top: -783px;
-  max-width: 200px;
-}
-
-.home-cookie-11.cookie {
-  -webkit-transform: rotate(77deg);
-  -ms-transform: rotate(77deg);
-  transform: rotate(77deg);
+  left: 266px;
+  top: -1191px;
 }
 
 .home-cookie-12 {
   position: relative;
-  left: -356px;
-  top: -861px;
-  max-width: 130px;
-  -webkit-transform: rotate(11deg);
-  -ms-transform: rotate(11deg);
-  transform: rotate(11deg);
+  left: -343px;
+  top: -800px;
+  overflow: hidden;
 }
 
 .social-image-home {
@@ -1885,6 +1857,11 @@ em {
   border-bottom-style: none;
   -webkit-filter: brightness(100%);
   filter: brightness(100%);
+}
+
+.list {
+  padding-left: 20px;
+  line-height: 1.3em;
 }
 
 @media (max-width: 991px) {
@@ -1963,7 +1940,7 @@ em {
     text-align: center;
   }
   .home_s1--block {
-    margin-bottom: -900px;
+    margin-bottom: -320px;
     -webkit-box-align: start;
     -webkit-align-items: flex-start;
     -ms-flex-align: start;
@@ -2051,6 +2028,8 @@ em {
   }
   .global-footer-contain {
     display: block;
+    height: 70px;
+    margin-top: -70px;
     padding-top: 20px;
     padding-bottom: 20px;
   }
@@ -2089,6 +2068,8 @@ em {
     text-align: center;
   }
   .page-navlink--block {
+    margin-right: auto;
+    margin-left: auto;
     padding: 10px;
     border-style: none;
     -webkit-transition: border 200ms cubic-bezier(.86, 0, .07, 1), all 200ms ease;
@@ -2132,9 +2113,9 @@ em {
   }
   .page-navlink--contain {
     margin-left: 0px;
-    padding-top: 40px;
+    padding-top: 80px;
     padding-right: 0rem;
-    padding-bottom: 12px;
+    padding-bottom: 40px;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -webkit-flex-direction: row;
@@ -2150,6 +2131,7 @@ em {
   .home-header-content {
     margin-top: 40px;
     margin-bottom: 20px;
+    padding-top: 32px;
     -webkit-box-flex: 0;
     -webkit-flex: 0 auto;
     -ms-flex: 0 auto;
@@ -2223,8 +2205,7 @@ em {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 0px;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -webkit-flex-direction: row;
@@ -2281,7 +2262,14 @@ em {
     color: #ef5268;
   }
   .footer-colophon {
-    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-bottom: 0px;
+    padding-left: 20px;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    line-height: 14px;
   }
   .home-text-contain {
     margin-top: 20px;
@@ -2327,28 +2315,81 @@ em {
     margin-top: 20px;
     padding-top: 0px;
   }
+  .home-cookie-01.cookie {
+    left: 74px;
+    top: 224px;
+    max-width: 50%;
+  }
+  .home-cookie-02.cookie {
+    top: -25px;
+    right: 45px;
+    max-width: 50%;
+  }
   .header-left-imgs {
     -webkit-flex-wrap: nowrap;
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+  }
+  .header-right-imgs {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
   }
   .home-cookie-03.cookie {
-    top: -36px;
-    right: 123px;
-    bottom: 33px;
+    top: 4px;
+    right: 90px;
+    bottom: 0px;
+    display: block;
+    max-width: 50%;
+  }
+  .home-cookie-04.cookie {
+    top: -379px;
+    max-width: 50%;
+  }
+  .home-cookie-05.cookie {
+    top: -22px;
+    max-width: 50%;
   }
   .home-cookie-06.cookie {
-    left: 8px;
+    left: -82px;
+    top: 134px;
+    max-width: 62%;
+  }
+  .home-cookie-07.cookie {
+    left: -9px;
+    top: -157px;
+    max-width: 50%;
   }
   .home-cookie-08.cookie {
-    left: -85px;
-    top: -260px;
+    left: 89px;
+    top: -187px;
     z-index: 1000;
+    max-width: 50%;
+  }
+  .home-cookie-09.cookie {
+    left: -88px;
+    top: -540px;
+    max-width: 60%;
   }
   .home-cookie-10.cookie {
-    left: -300px;
-    top: -419px;
+    left: 133px;
+    top: -310px;
     z-index: 100000;
+    display: none;
+    max-width: 39%;
+  }
+  .home-cookie-11.cookie {
+    left: 97px;
+    top: -490px;
+    max-width: 50%;
+  }
+  .home-cookie-12.cookie {
+    max-width: 50%;
   }
   .social-link-home {
     -webkit-filter: brightness(200%) saturate(0%);
@@ -2368,7 +2409,7 @@ em {
     padding-top: 15px;
   }
   .home_s1--block {
-    margin-bottom: -870px;
+    margin-bottom: -240px;
   }
   .home_img--logo {
     width: 22rem;
@@ -2476,6 +2517,9 @@ em {
     padding-top: 0px;
     padding-bottom: 0px;
   }
+  .button.melon {
+    z-index: 10000;
+  }
   .specials-contain {
     padding: 0px 40px;
   }
@@ -2582,7 +2626,7 @@ em {
     align-items: center;
   }
   .special-descrip {
-    text-align: center;
+    text-align: left;
   }
   .specials-summary {
     padding: 0px 20px;
@@ -2601,23 +2645,98 @@ em {
   .about-contain {
     padding: 0px 40px;
   }
+  .order-buttons {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
   .home-cookie-01.cookie {
-    left: -1px;
+    left: 114px;
+    top: 212px;
+    max-width: 50%;
+    -webkit-transform: rotate(-11deg);
+    -ms-transform: rotate(-11deg);
+    transform: rotate(-11deg);
   }
   .home-cookie-02.cookie {
-    top: 156px;
-    right: -81px;
+    top: -38px;
+    right: -17px;
+    display: none;
+  }
+  .header-left-imgs {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+  }
+  .header-right-imgs {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+  }
+  .home-cookie-03.cookie {
+    top: 116px;
+    right: 30px;
+    -webkit-transform: rotate(-29deg);
+    -ms-transform: rotate(-29deg);
+    transform: rotate(-29deg);
+  }
+  .home-cookie-04.cookie {
+    top: -292px;
+    right: -10px;
   }
   .home-cookie-05.cookie {
-    top: -36px;
+    left: -19px;
+    top: -23px;
+    max-width: 54%;
   }
   .home-cookie-06.cookie {
-    left: -21px;
-    top: -53px;
+    left: -100px;
+    top: 125px;
+    -webkit-transform: rotate(14deg);
+    -ms-transform: rotate(14deg);
+    transform: rotate(14deg);
+  }
+  .home-cookie-07.cookie {
+    left: -259px;
+    top: 0px;
+    -webkit-transform: rotate(3deg);
+    -ms-transform: rotate(3deg);
+    transform: rotate(3deg);
+  }
+  .home-cookie-08.cookie {
+    left: -53px;
+    top: -298px;
+    max-width: 55%;
+  }
+  .home-cookie-09.cookie {
+    left: 9px;
+    top: -267px;
+    display: block;
+    -webkit-transform: rotate(-6deg);
+    -ms-transform: rotate(-6deg);
+    transform: rotate(-6deg);
   }
   .home-cookie-10.cookie {
-    left: -313px;
-    top: -463px;
+    left: 59px;
+    top: -316px;
+    display: block;
+  }
+  .home-cookie-11.cookie {
+    left: -12px;
+    top: -430px;
+    display: none;
   }
 }
 
@@ -2626,8 +2745,8 @@ em {
     margin-top: 0px;
   }
   .home_s1--block {
-    margin-top: 20px;
-    margin-bottom: auto;
+    margin-top: -30px;
+    margin-bottom: 6px;
     -webkit-box-pack: center;
     -webkit-justify-content: center;
     -ms-flex-pack: center;
@@ -2638,7 +2757,7 @@ em {
     align-items: flex-start;
   }
   .home_img--logo {
-    width: 18rem;
+    width: 15rem;
     margin-bottom: 0px;
   }
   .home-header-text {
@@ -2647,9 +2766,33 @@ em {
     margin-bottom: 20px;
     padding: 0px;
   }
+  .home-header-text.desk {
+    width: 310px;
+    padding-top: 15px;
+    font-size: 1em;
+  }
   .home_gallery--block1 {
     height: auto;
     padding-bottom: 20px;
+  }
+  .home_section-2--columns {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    padding-bottom: 10px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
+  .gallery_column--contain {
+    margin-top: 10px;
+    padding: 0px 5px;
+  }
+  .gallery_column--contain._01 {
+    display: none;
   }
   .gallery_block-1--title {
     font-size: 1.8em;
@@ -2706,6 +2849,9 @@ em {
   .specials-contain {
     padding: 0px 20px 20px;
   }
+  .footer-colophon {
+    padding-top: 0px;
+  }
   .view-button {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -2738,6 +2884,9 @@ em {
   .pricing-contain {
     padding: 10px;
   }
+  .special-descrip {
+    text-align: left;
+  }
   .about-contain {
     padding: 0px 20px 20px;
   }
@@ -2746,6 +2895,9 @@ em {
   }
   .home-cookie-02.cookie {
     display: none;
+  }
+  .header-left-imgs {
+    display: block;
   }
   .home-cookie-03.cookie {
     display: none;
