Final commit before launch

--- a/wp-content/themes/cookiequeen/css/style.css
+++ b/wp-content/themes/cookiequeen/css/style.css
@@ -84,8 +84,6 @@ body {
   margin-bottom: 0;
 }
 
-
-
 .size-300x300.wp-post-image {
   border: 15px solid #fff;
 }
@@ -117,9 +115,12 @@ body {
 }
 
 /* SPECIALS TEMPLATE */
+.specials-summary {
+  text-align: left;
+}
+
 .special-descrip ul {
   padding-left: 20px;
-
 }
 
 /* FAQ */
@@ -197,6 +198,15 @@ body {
 
 .nf-field-label label {
   font-weight: 400 !important;
+}
+
+.label-above .nf-field-label {
+  margin-bottom: 5px;
+}
+
+.nf-field-description {
+  padding-top: 0;
+  padding-bottom: 10px;
 }
 
 .nf-field-label label a {
