--- a/wp-content/themes/cookiequeen/css/corner-hutch-cookies.webflow.css
+++ b/wp-content/themes/cookiequeen/css/corner-hutch-cookies.webflow.css
@@ -41,8 +41,10 @@ h3 {
 h4 {
   margin-top: 10px;
   margin-bottom: 10px;
-  line-height: 24px;
-  font-weight: 700;
+  font-size: 1.2rem;
+  line-height: 1.4rem;
+  font-weight: 400;
+  text-align: center;
 }
 
 p {
@@ -228,8 +230,6 @@ em {
 }
 
 .home_img--logo {
-  position: relative;
-  z-index: 1000000;
   width: 450px;
   margin-bottom: 15px;
   -webkit-transform: rotate(0deg);
@@ -960,15 +960,6 @@ em {
   flex: 0 50%;
 }
 
-.button.melon.small.specials {
-  width: 50%;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-}
-
 .page-contain {
   padding-top: 100px;
   padding-bottom: 40px;
@@ -1128,10 +1119,10 @@ em {
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .about-img {
@@ -1840,13 +1831,6 @@ em {
   float: none;
 }
 
-.social-image-copy {
-  width: 30px;
-  margin-right: 10px;
-  margin-left: 10px;
-  float: none;
-}
-
 .social-link-home {
   border-bottom-style: none;
   -webkit-filter: brightness(0%);
@@ -1862,6 +1846,13 @@ em {
 .list {
   padding-left: 20px;
   line-height: 1.3em;
+}
+
+.heading {
+  font-size: 1.2rem;
+  line-height: 1.4rem;
+  font-weight: 400;
+  text-align: center;
 }
 
 @media (max-width: 991px) {
@@ -1908,6 +1899,9 @@ em {
     padding-top: 50px;
     padding-bottom: 0px;
   }
+  .global_site--contain {
+    padding-bottom: 60px;
+  }
   .navbar-mobile-menu {
     position: absolute;
     left: 0%;
@@ -1947,6 +1941,7 @@ em {
     align-items: flex-start;
   }
   .home_img--logo {
+    z-index: 1;
     display: block;
     width: 400px;
     margin-bottom: 17px;
@@ -2405,6 +2400,9 @@ em {
     padding-top: 40px;
     padding-bottom: 10px;
   }
+  .global_site--contain {
+    padding-bottom: 60px;
+  }
   .navbar-mobile-menu {
     padding-top: 15px;
   }
@@ -2788,7 +2786,7 @@ em {
     flex-direction: row;
   }
   .gallery_column--contain {
-    margin-top: 10px;
+    margin-top: 5px;
     padding: 0px 5px;
   }
   .gallery_column--contain._01 {
@@ -2802,6 +2800,7 @@ em {
     height: 150px;
   }
   .home_section-3--contain {
+    padding-top: 25px;
     font-size: 16px;
   }
   .news_content--text {
@@ -2851,6 +2850,9 @@ em {
   }
   .footer-colophon {
     padding-top: 0px;
+  }
+  .joy {
+    width: 250px;
   }
   .view-button {
     padding-top: 10px;
